# crate-digger-cpp

./: .gitignore  CMakeLists.txt  IR_SCHEMA.md  LICENSE  README.md
include/cratedigger/: api_schema.hpp  cratedigger.hpp  database.hpp  logging.hpp  rekordbox_anlz.hpp  rekordbox_pdb.hpp  types.hpp
src/cli/: main.cpp
src/core/: api_schema.cpp  database.cpp  database_impl.hpp  database_util.cpp  logging.cpp  rekordbox_anlz.cpp  rekordbox_pdb.cpp
src/python/: bindings.cpp
tests/: golden_test.py  test_api_schema.cpp  test_database.cpp
